--- a/calc.html
+++ b/calc.html
@@ -27,7 +27,7 @@
     }
 
     // Determines the winner of a rock, paper, scissors game and prints the solution
-    function Find_Winner(playerSelection, computerSelection) {
+    function playRound(playerSelection, computerSelection) {
         if (playerSelection === "Rock") {
             if (computerSelection === "Scissors") {
                 return "You Lose!";
@@ -57,10 +57,12 @@
     }
 
     function game() {
-        
+        let playerSelection = prompt("Rock, Paper, or Scissors?");
+        let computerSelection = computerPlay();
+        let Result = playRound(playerSelection, computerSelection);
+        console.log("The computer chose" + " " + computerSelection + " " + "and you chose" + " " + playerSelection + " " + Result);
     }
         
-
   </script>
 </body>
 </html>
