--- a/Rock_Paper_Scissors.html
+++ b/Rock_Paper_Scissors.html
@@ -28,26 +28,26 @@
 
     // Determines the winner of a rock, paper, scissors game and prints the solution
     function playRound(playerSelection, computerSelection) {
-        if (playerSelection === "Rock") {
-            if (computerSelection === "Scissors") {
+        if (playerSelection.toLowerCase() === "rock") {
+            if (computerSelection.toLowerCase() === "scissors") {
                 return "You Lose!";
-            } else if (computerSelection === "Paper") {
+            } else if (computerSelection.toLowerCase() === "paper") {
                 return "You Win!";
             } else {
                 return "Tie!"
             }
-        } else if (playerSelection === "Paper") {
-            if (computerSelection === "Scissors") {
+        } else if (playerSelection.toLowerCase() === "paper") {
+            if (computerSelection.toLowerCase() === "scissors") {
                 return "You Lose!";
-            } else if (computerSelection === "Rock") {
+            } else if (computerSelection.toLowerCase() === "rock") {
                 return "You Win!";
             } else {
                 return"Tie!";
             }
         } else {
-            if (computerSelection === "Rock") {
+            if (computerSelection.toLowerCase() === "rock") {
                 return "You Lose!";
-            } else if (computerSelection === "Paper") {
+            } else if (computerSelection.toLowerCase() === "paper") {
                 return "You Win!";
             } else {
                 return "Tie!";
@@ -57,10 +57,12 @@
     }
 
     function game() {
-        let playerSelection = prompt("Rock, Paper, or Scissors?");
-        let computerSelection = computerPlay();
-        let Result = playRound(playerSelection, computerSelection);
-        console.log("The computer chose" + " " + computerSelection + " " + "and you chose" + " " + playerSelection + " " + Result);
+        for (i = 0; i < 5; i++) {
+            let playerSelection = prompt("Rock, Paper, or Scissors?");
+            let computerSelection = computerPlay();
+            let Result = playRound(playerSelection, computerSelection);
+            console.log("The computer chose" + " " + computerSelection + " " + "and you chose" + " " + playerSelection.toLowerCase() + " " + Result);
+        }
     }
         
   </script>
