--- a/Rock_Paper_Scissors.html
+++ b/Rock_Paper_Scissors.html
@@ -56,6 +56,9 @@
             
     }
 
+    // funtion that runs the game 5 times, 
+    //each time the user is asked to imput either rock, paper, or scissors and then the console shows what the computer picked, 
+    //what the user picked and who won the game. 
     function game() {
         for (i = 0; i < 5; i++) {
             let playerSelection = prompt("Rock, Paper, or Scissors?");
