--- a/index.html
+++ b/index.html
@@ -21,15 +21,26 @@
 
 <div class = "container">
     <div class = "button">
-        <button id = "btn1" type="button">Rock</button>
+        <button id = "btn1" class = "btnStyle" type="button">
+            <img src="https://cdn.pixabay.com/photo/2014/12/22/00/03/rock-576667_960_720.png" 
+            alt="Rock" width="100"
+            height="80"></button>
     </div>
 
     <div class = "button">
-     <button id = "btn2" type="button">Paper</button>
+     <button id = "btn2" class = "btnStyle" type="button">
+        <img src="https://cdn.pixabay.com/photo/2012/04/01/17/33/parchment-23661_960_720.png" 
+        alt="Paper" width="100"
+        height="80">
+     </button>
     </div>
 
     <div class = "button">
-        <button id = "btn3" type="button">Scissors</button>
+        <button id = "btn3" class = "btnStyle" type="button">
+            <img src="https://cdn.pixabay.com/photo/2014/04/03/10/51/scissors-311500_640.png" 
+        alt="Paper" width="100"
+        height="80">
+        </button>
     </div>
 </div>
 
