--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel='stylesheet' type='text/css' href='Rock_Paper_Scissors.css'>
 </head>
-<body>
+<body class = "background">
 
 <h1 class = "head">
      Play Rock Paper Scissors
